--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<header>Welcome to our site</header>
+<header th:fragment="my-partial">
+    Welcome to our site
+</header>
 </html>
