--- a/src/main/resources/templates/fruit.html
+++ b/src/main/resources/templates/fruit.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Fruit</title>
 </head>
 <body>
-<div th:include="partials/header.html :: my-partial">
-   This div well be replavced
-</div>
-
+<!--<div th:include="partials/header.html :: my-partial">-->
+<!--    This div will be *replaced* by the fragment-->
+<!--</div>-->
 <h1>Fruit Basket</h1>
 <ul>
-    <li th:each="item : ${fruitBasket}">
-<!--        <p th:text="${fruit}"></p>-->
-<!--        <p th:if='${fruit.equals("pineaple")}'>This is myfavorite</p>-->
+    <li th:each="fruit : ${fruitBasket}">
+        <p th:text="${fruit}"></p>
+        <p th:if='${fruit.equals("pineapple")}' >This is my favorite</p>
     </li>
 </ul>
 
