--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,28 +1,27 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="partials/head :: head"></head>
-
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="partials/head :: head('All Posts')"></head>
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
 
+<div class="container mt-4">
 
+    <div th:each="post : ${posts}">
+        <a th:href="@{|/posts/${post.id}|}"><h1 th:text="${post.title}"></h1></a>
+        <p th:text="${post.body}"></p>
+        <a th:href="'mailto:'+${post.user.email}"><span th:text="${post.user.email}"></span> </a>
 
+        <div class="text-right mb-1">
+            <button><a th:href="@{|/posts/${post.id}/edit|}" style="color: black">Edit Post</a></button>
+        </div>
+        <form th:action="@{|/posts/${post.id}/delete|}" th:method="POST" class="text-right">
+            <button>Delete Post</button>
+        </form>
+        <hr>
+    </div>
+
+</div>
+
+<th:block th:replace="partials/scriptsBootstrap :: scripts" />
 </body>
-</html>
-
-
-
-
-
-
-
-<!--<div class="container">-->
-<!--    <div th:each="post : ${posts}" class="float-left m-3">-->
-<!--        <div class="card" style="width: 18rem;">-->
-<!--            <div class="card-body">-->
-<!--                <h4 th:text="${post.title}" class="card-title"></h4>-->
-<!--                <p th:text="${post.body}" class="card-text"></p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
+</html>-->
