--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -1,16 +1,15 @@
-
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>show</title>
-</head>
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="partials/head :: head('View Post')"></head>
 <body>
+<nav th:replace="partials/navbar :: navbar"></nav>
 
+<div class="container mt-4">
+    <h1 th:text="${post.title}"></h1>
+    <p th:text="${post.body}"></p>
+    <a th:href="'mailto:'+${post.user.email}"><span th:text="${post.user.email}"></span> </a>
+</div>
 
-<h2 th:text="${post.title}"></h2>
-<p th:text="${post.body}"></p>
-<p th:text="${post.user.email}"></p>
-
+<th:block th:replace="partials/scriptsBootstrap :: scripts" />
 </body>
 </html>
